# mini

./: README.md  mini.cabal
lab/: Cont.hs  ContAndError.hs  ContErrorState.hs  ContState.hs  Error.hs  ErrorCont.hs  FuncCallAndReturn.hs
src/: Debug.hs  Mini.hs  Stack.hs  Types.hs
src/Evaluating/: Conversion.hs  ConversionM.hs  Environment.hs  EnvironmentM.hs  Eval.hs  Evaluator.hs  Exception.hs  ExceptionM.hs  Heap.hs  HeapM.hs  LexicalStack.hs  Object.hs  Object.hs-boot  RefHeap.hs  Scope.hs  Value.hs
src/Lexing/: BooleanLiteral.hs  Identifier.hs  Keyword.hs  Lexer.hs  NumericLiteral.hs  Punctuator.hs  StringLiteral.hs  Token.hs
src/Parsing/: Ast.hs  Keyword.hs  Parser.hs  Punctuator.hs  TokenParser.hs
tests/units/: MiniUnitTests.hs
tests/units/EvaluatingTests/: ExceptionTests.hs
tests/units/ParsingTests/: ParsingTests.hs
